--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 <head>
+  <script type="text/javascript">
+    var host = "peakydicers.com";
+    if ((host == window.location.host) && window.location.protocol != "https:"))
+    window.location.protocol = "https";
+  </script>
   <link rel="canonical" href="https://peakydicers.com"/>
   </head>
 <p> i am peakyDicers </p>
