--- a/index.html
+++ b/index.html
@@ -1,11 +1,29 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<title> peakyDicers </title>
+
 <head>
-  <script type="text/javascript">
-    var host = "peakydicers.com";
-    if ((host == window.location.host) && window.location.protocol != "https:"))
-    window.location.protocol = "https";
-  </script>
-  <link rel="canonical" href="https://peakydicers.com"/>
-  </head>
-<p> i am peakyDicers </p>
-<html>
+    <script type="text/javascript">
+        var host = "peakydicers.com";
+        if ((host == window.location.host) && window.location.protocol != "https:"))
+        window.location.protocol = "https";
+    </script>
+    <style type="text/css">body{margin:40px
+      auto;max-width:650px;line-height:1.6;font-size:18px;color:#444;padding:0
+      10px;background-color: #EEEEEE}h1,h2,h3{line-height:1.2}</style>
+</head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="canonical" href="https://peakydicers.com"/>
+<body>
+  <h1>Why, hello there. </h1>
+    <p>
+      My name is Ian and this is my website.
+    </p>
+    <a href="https://github.com/peakyDicers">github</a>
+    <a href="https://twitter.com/peakyDicers">twitter</a>
+    <a href="https://www.facebook.com/peakyDicers">facebook</a>
+    <a href="http://peakydicers.tumblr.com/">tumblr</a>
+</body>
+
+</html>
