--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
       var mydate = new Date();
       var month = ["January", "February", "March", "April", "May", "June",
         "July", "August", "September", "October", "November", "December"][mydate.getMonth()];
-      var str = month + ' ' + mydate.getDay() + ', ' + mydate.getFullYear() + ' ' + sendTime(mydate);
+      
+      var str = month + ' ' + mydate.getDate() + ', ' + mydate.getFullYear() + ' ' + sendTime(mydate);
+      console.log('lmao', mydate.getDate());
       console.log(str);
 
 
