--- a/index.html
+++ b/index.html
@@ -3,201 +3,48 @@
 <title> peakyDicers </title>
 
 <head>
-  <script src="./sketch.js"></script>
-
   <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
-  <script>
-    // Initialize Firebase
-    var config = {
-      apiKey: "AIzaSyDXvlHh-ZUsh77fT4IdbVSCv8jL9iwvhSk",
-      authDomain: "peaky-website.firebaseapp.com",
-      databaseURL: "https://peaky-website.firebaseio.com",
-      projectId: "peaky-website",
-      storageBucket: "gs://peaky-website.appspot.com/",
-      messagingSenderId: "512676933345"
-    };
-    firebase.initializeApp(config);
-  </script>
-  <script>
-    var userID;
-    firebase.auth().signInAnonymously().catch(function (error) {
+  <script src="./sketch.js"></script>
+  
+  <script src="./Star.js"></script>
+  <script src="./p5.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="./styles.css">
 
-      // Handle Errors here.
-      var errorCode = error.code;
-      var errorMessage = error.message;
-      // ...
-    });
-
-    firebase.auth().onAuthStateChanged(function (user) {
-      if (user) {
-        userID = user.uid;
-        loadOnce();
-      }
-    });
-
-    var database = firebase.database();
-    var storage = firebase.storage();
-    var ref = storage.ref();
-    var msgRef = ref.child('theMessages.txt');
-
-
-    function sendTime(date) {
-      var hours = date.getHours();
-      var minutes = date.getMinutes();
-      var ampm = hours >= 12 ? 'pm' : 'am';
-      hours = hours % 12;
-      hours = hours ? hours : 12; // the hour '0' should be '12'
-      minutes = minutes < 10 ? '0' + minutes : minutes;
-      var strTime = hours + ':' + minutes + ' ' + ampm;
-      return strTime;
-    }
-
-    function sendMsg() {
-      var oldMsg = "";
-      var msg = document.getElementById("inputField").value;
-      var mydate = new Date();
-      var month = ["January", "February", "March", "April", "May", "June",
-        "July", "August", "September", "October", "November", "December"][mydate.getMonth()];
-
-      var str = month + ' ' + mydate.getDate() + ', ' + mydate.getFullYear() + ' ' + sendTime(mydate);
-
-      document.getElementById('inputField').value = '';
-
-      var uniqueID = firebase.database().ref('messages').push();
-      uniqueID.set({
-        message: msg,
-        date: str
-      });
-
-    }
-
-  </script>
-  <script type="text/javascript">
-    var host = "peakydicers.com";
-    if ((host == window.location.host) && window.location.protocol != "https:")
-      window.location.protocol = "https";
-  </script>
-  <script>
-    var theMessages = firebase.database().ref('messages/');
-
-    function loadOnce() {
-      theMessages.on('value', function (snapshot) {
-        var listNode = document.getElementById("list");
-        while (listNode.hasChildNodes()) {
-          listNode.removeChild(listNode.lastChild);
-        }
-        var result = [];
-        for (var key in snapshot.val()) {
-          // skip loop if the property is from prototype
-          if (!snapshot.val().hasOwnProperty(key)) continue;
-          var obj = snapshot.val()[key];
-          result.push(obj);
-        }
-        result.reverse();
-        for (var i = 0; i < result.length; i++) {
-          var mainContainer = document.createElement('div');
-          mainContainer.classList.add('mainContainer');
-          var node = document.createElement("p");
-          var textnode = document.createTextNode(result[i].message);
-          var textContainer = document.createElement('div');
-          var dateContainer = document.createElement('div');
-          var textnode2 = document.createTextNode(result[i].date);
-
-          dateContainer.classList.add('date');
-          dateContainer.appendChild(textnode2);
-          node.appendChild(textnode);
-          textContainer.appendChild(dateContainer)
-          node.appendChild(textContainer);
-          mainContainer.appendChild(node)
-          document.getElementById("list").appendChild(mainContainer);
-
-        }
-      });
-
-      var x = document.getElementById("myAudio");
-      x.volume = 0.3;
-
-    }
-  </script>
-  <style type="text/css">
-    body, html { overflow: hidden;}
-    .main {
-      margin: 40px auto;
-      max-width: 650px;
-      line-height: 1.6;
-      font-size: 18px;
-      color: #444;
-      padding: 0 10px;
-      background-color: rgba(238, 238, 238, .6);
-      border-radius: 10;
-      overflow-y: auto;
-      max-height: 75vh;
-      display: block
-    }
-
-    .mainContainer {
-      color: #444;
-      background-color: rgba(221, 219, 219, .6);
-      word-wrap: break-word;
-      padding-left: 10px;
-      padding-right: 10px;
-      border-radius: 2px;
-    }
-
-    #sketch-holder {
-      z-index: -1;
-      position: absolute;
-      top: 0;
-      left: 0;
-    }
-
-    h1,
-    h2,
-    h3 {
-      line-height: 1.2
-    }
-
-    h1 {
-      justify-content: center;
-      align-self: center;
-    }
-  </style>
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-
 <link rel="canonical" href="https://peakydicers.com" />
 
 <body>
   <div id="sketch-holder">
-
   </div>
-  <div class="main">
-    <script src="./Star.js"></script>
-    <script src="./p5.min.js"></script>
-    <h1>peaky dicers</h1>
-    <p>
-      hello, my name is ian and this is my website.
-    </p>
-    <a href="https://github.com/peakyDicers">github</a>
-    <a href="https://twitter.com/peakyDicers">twitter</a>
-    <a href="https://www.facebook.com/peakyDicers">facebook</a>
-    <a href="http://peakydicers.tumblr.com/">tumblr</a>
-
-    <div style="display: table-row">
-      <div style="display: table-cell">
-        <p> leave a message: </p>
+  <div class="container">
+    <div class="main" id="main">
+      <h1 align="center">peakyDicers</h1>
+      <p align="center">
+        hello, my name is ian and this is my website.
+      </p>
+      <div style="text-align:center">
+        <a href="https://github.com/peakyDicers">github</a>
+        <a href="https://twitter.com/peakyDicers">twitter</a>
+        <a href="https://www.facebook.com/peakyDicers">facebook</a>
+        <a href="http://peakydicers.tumblr.com/">tumblr</a>
       </div>
-      <div style="display: table-cell">
-        <input type="text" id="inputField">
-        <button onclick="sendMsg()">enter</button>
+      <div style="display: table-row">
+        <div style="display: table-cell">
+          <p> leave a message: </p>
+        </div>
+        <div style="display: table-cell">
+          <input type="text" id="inputField">
+          <button onclick="sendMsg()">enter</button>
+        </div>
       </div>
-
+      <p id="list"></p>
     </div>
-    <p id="list"></p>
   </div>
   <audio loop autoplay id="myAudio">
     <source src="./song.mp3" type="audio/mp3"> Your browser does not support the audio element.
   </audio>
 </body>
+<script src="./comments.js"></script>
 
 </html>
