--- a/index.html
+++ b/index.html
@@ -1,50 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<title> peakyDicers </title>
-
-<head>
-  <script src="https://www.gstatic.com/firebasejs/4.10.1/firebase.js"></script>
-  <script src="./sketch.js"></script>
-  
-  <script src="./Star.js"></script>
-  <script src="./p5.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="./styles.css">
-
-</head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="canonical" href="https://peakydicers.com" />
-
-<body>
-  <div id="sketch-holder">
-  </div>
-  <div class="container">
-    <div class="main" id="main">
-      <h1 align="center">peakyDicers</h1>
-      <p align="center">
-        hello, my name is ian and this is my website.
-      </p>
-      <div style="text-align:center">
-        <a href="https://github.com/peakyDicers">github</a>
-        <a href="https://twitter.com/peakyDicers">twitter</a>
-        <a href="https://www.facebook.com/peakyDicers">facebook</a>
-        <a href="http://peakydicers.tumblr.com/">tumblr</a>
-      </div>
-      <div style="display: table-row">
-        <div style="display: table-cell">
-          <p> leave a message: </p>
-        </div>
-        <div style="display: table-cell">
-          <input type="text" id="inputField">
-          <button onclick="sendMsg()">enter</button>
-        </div>
-      </div>
-      <p id="list"></p>
-    </div>
-  </div>
-  <audio loop autoplay id="myAudio">
-    <source src="./song.mp3" type="audio/mp3"> Your browser does not support the audio element.
-  </audio>
-</body>
-<script src="./comments.js"></script>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>React App</title><link href="/static/css/main.f0dfb6cf.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.9e249a33.js"></script></body></html>
