--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no"><meta name="theme-color" content="#000000"><link rel="manifest" href="/manifest.json"><link rel="shortcut icon" href="/favicon.ico"><title>peakyDicers</title><link href="/static/css/main.f0dfb6cf.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script type="text/javascript" src="/static/js/main.af232849.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+
+<body>
+
+    <div class="mainBlock">
+        <h1>peakyDicers</h1>
+        <a href="https://www.github.com/peakyDicers">Github</a>
+        <p>
+         Soundboard Kingdom is a mobile app that allow users to create and share their own soundboards. 
+         <a href="https://play.google.com/store/apps/details?id=com.peakymobile">Android</a>
+         <a href="https://itunes.apple.com/us/app/soundboard-kingdom/id1436527286?ls=1&mt=8">iOS</a>
+        </p>
+    </div>
+    <pre>
+            System.out.println("hey, i'm currently working on a unity project.")
+            
+            while (false){
+                System.out.println("Yeet");
+            }
+        </pre>
+    </div>
+</body>
+
+</html>
