--- a/index.html
+++ b/index.html
@@ -2,20 +2,67 @@
 <html>
 
 <head>
-    <link rel="stylesheet" type="text/css" href="main.css?v=2">
+	<meta charset="utf-8" />
+	<link rel="stylesheet" type="text/css" href="main.css?v=2">
+	<!-- <script src="type.js"></script>  -->
+	<!-- // <script> typeWriter(); </script> -->
+	<META HTTP-EQUIV="refresh" CONTENT="5000">
 </head>
 
-<body>
+<body style="background-color:black;">
 
-    <div class="mainBlock">
-       
-    </div>
+		<audio id="audio" autoplay loop>
+				<source src="song.mp3" type="audio/mpeg">
+			  </audio> 
+
+	<div class="mainBlock">
+
+	</div>
 	<div class="center">
-		<p align="center"> What is this?</p>
-		<p align="center"> It's beautiful. </p>
-	<div>
-    
-    </div>
+		<p align="center" id="what"></p>
+		<p align="center" id="b"></p>
+		<div>
+
+		</div>
+		<script>
+			var i = -1;
+			var j = 0;
+			var txt = 'What is this?'; /* The text */
+			var txt2 = "It's beautiful.";
+			var speed = 50; /* The speed/duration of the effect in milliseconds */
+
+			function typeWriter() {
+				if (i == -1){
+					setTimeout(typeWriter, 1700)
+					i++
+					return;
+				}
+				if (i < txt.length) {
+					document.getElementById("what").innerHTML += txt.charAt(i);
+					if (i == txt.length - 1) {
+						setTimeout(typeWriter, 2700);
+						i++;
+						return;
+					} else {
+						setTimeout(typeWriter, speed);
+					}
+					i++;
+				}
+				if (i >= txt.length) {
+					if (j < txt2.length) {
+						document.getElementById("b").innerHTML += txt2.charAt(j);
+						j++;
+						setTimeout(typeWriter, speed);
+					}
+				}
+			}
+
+			var audio = document.getElementById("audio");
+  			audio.volume = 0.4;
+			window.onload = typeWriter;
+		</script>
 </body>
+
+
 
 </html>
