--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body style="background-color:black;">
 
 		<audio id="audio" autoplay loop>
-				<source src="song.mp3" type="audio/mpeg">
+				<source src="song.mp3" type="audio/mp3">
 			  </audio> 
 
 	<div class="mainBlock">
